cleanup code and readme

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,11 +12,6 @@
 platform = espressif32
 framework = arduino
 board = esp32dev
-lib_deps = 
-           ArduinoJson
-           PubSubClient
-           beegee-tokyo/DHT sensor library for ESPx@^1.19
-           NTPClient
-           
+lib_deps = ArduinoJson
 ; Serial Monitor options
 monitor_speed = 115200
